# vumi2

./: .dockerignore  .gitignore  .readthedocs.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  log.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test.yaml
docs/: applications.rst  conf.py  config.rst  index.rst  message_caches.rst  message_stores.rst  middleware.rst  routers.rst  transports.rst
docs/applications/: junebug_message_api.rst  turn_channels_api.rst
docs/middleware/: building_your_own_middleware.rst
docs/transports/: aat_ussd.rst  smpp.rst
src/vumi2/: amqp.py  async_helpers.py  class_helpers.py  cli.py  config.py  connectors.py  errors.py  message_caches.py  message_stores.py  messages.py  routers.py  services.py  utils.py  workers.py
src/vumi2/applications/: __init__.py  errors.py  state_cache.py
src/vumi2/applications/junebug_message_api/: errors.py  junebug_message_api.py  junebug_state_cache.py  messages.py
src/vumi2/applications/static_reply/: __init__.py  static_reply.py
src/vumi2/applications/turn_channels_api/: README.md  __init__.py  messages.py  turn_channels_api.py
src/vumi2/middlewares/: __init__.py  base.py  logging.py  unidecoder.py
src/vumi2/middlewares/tests/: helpers.py  test_logging.py  testing_logging.py  utils.py
src/vumi2/transports/: __init__.py
src/vumi2/transports/aat_ussd/: __init__.py  aat_ussd.py
src/vumi2/transports/httprpc/: __init__.py  http_rpc.py
src/vumi2/transports/smpp/: __init__.py  client.py  codecs.py  processors.py  sequencers.py  smpp.py  smpp_cache.py
tests/: conftest.py  helpers.py  test_async_helpers.py  test_cli.py  test_config.py  test_dispatchers.py  test_message_caches.py  test_message_stores.py  test_messages.py  test_routers.py  test_utils.py  test_workers.py  utils.py
tests/applications/: test_junebug_message_api.py  test_junebug_state_cache.py  test_static_reply.py  test_turn_channels_api.py
tests/middlewares/: test_base.py  test_logging.py  test_unicode.py  test_unidecoder.py
tests/transports/: test_aat_ussd.py  test_http_rpc.py
tests/transports/smpp/: helpers.py  test_client.py  test_codecs.py  test_processors.py  test_sequencer.py  test_smpp.py  test_smpp_cache.py
utils/: install_smpp_sim.sh
vumi2/: messages.py
vumi2/tests/: test_messages.py
