[tool.poetry]
name = "vumi2"
version = "0.0.1"
description = "Vumi, but with Python3 and Trio async"
authors = ["Praekelt.org <dev@praekelt.org>"]
license = "BSD 3-Clause"
readme = "README.md"
repository = "https://github.com/praekeltfoundation/vumi2"
packages = [
    { include = "vumi2", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.8"
trio = "^0.22.0"
async-amqp = "^0.5.0"
attrs = "^23.1.0"
cattrs = "^22.2.0"
PyYAML = "^6.0"
sentry-sdk = "^1.9.3"
quart-trio = "^0.10.0"
hypercorn = "^0.14.3"
"smpp.pdu3" = "^0.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"
# Pin flake8 to a lower version because it conflicts with sphinx
flake8 = "^3.9.0"
pytest = "^7.2.0"
pytest-trio = "^0.7.0"
pytest-cov = "^4.0.0"
Sphinx = "^5.1.1"

[tool.poetry.scripts]
vumi2 = "vumi2.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
preview = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
trio_mode = true
addopts = "--cov=src"
