[tool.poetry]
name = "vumi2"
version = "0.3.0"
description = "Vumi, but with Python3 and Trio async"
authors = ["Praekelt.org <dev@praekelt.org>"]
license = "BSD 3-Clause"
readme = "README.md"
repository = "https://github.com/praekeltfoundation/vumi2"
packages = [
    { include = "vumi2", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.11"
trio = "^0.24.0"
async-amqp = "^0.5.5"
attrs = "^23.2.0"
cattrs = "^23.2.3"
PyYAML = "^6.0.1"
sentry-sdk = "^2.8.0"
quart-trio = "^0.11.1"
hypercorn = "^0.16.0"
"smpp.pdu3" = "^0.6"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-trio = "^0.8.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.1"
Sphinx = "^7.2.6"
sphinxcontrib-httpdomain = "^1.8.1"
trio-typing = "^0.10.0"
types-pyyaml = "^6.0.12.12"

[tool.poetry.group.lsp]
optional = true

[tool.poetry.group.lsp.dependencies]
python-lsp-server = "^1.10.0"
python-lsp-ruff = "^2.1.0"
python-lsp-black = "^2.0.0"
pylsp-mypy = "^0.6.8"

[tool.poetry.scripts]
vumi2 = "vumi2.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
preview = true

[tool.mypy]
ignore_missing_imports = false
check_untyped_defs = true

[tool.pytest.ini_options]
trio_mode = true
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.report]
exclude_also = ["@overload"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W", # pycodestyle + pyflakes == flake8 - mccabe
    "I",           # isort
    "UP",          # pyupgrade
    "S",           # flake8-bandit
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    "PIE",         # flake8-pie
    "PT",          # flake8-pytest-style
    "SIM",         # flake8-simplify
    "PTH",         # flake8-use-pathlib
]
ignore = [
    "SIM117", # Nested `with` is often more readable.
]

[tool.ruff.lint.isort]
known-first-party = ["vumi2"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # It's okay to use `assert` in tests.
]
